# nixos-config

./: .gitignore  README.md  apply.sh  flake.nix  full-update.sh  install.sh  secrets.nix
.github/workflows/: build-installer.yml  build-test.yml  flake-update.yml  main.yml  reset-updates.yml  test.yml  update-test.yml
config/: acpi.nix  audio.nix  boot.nix  console.nix  env.nix  fonts.nix  kernel.nix  ld.nix  lvm.nix  nix.nix  pam-mount.nix  pam.nix  podman.nix  printing.nix  secureboot.nix  sudo.nix  tailscale.nix  time.nix  uhid.nix  users.nix
config/applications/: evolution.nix  general.nix  gpg.nix  java.nix  nodejs.nix  python.nix  steam.nix
config/cpu/: intel.nix
config/de/: gnome.nix
config/fs/: mounts.nix
config/hardware/: battery.nix  gpu.nix  hyperv.nix  keyboard.nix  nvidia.nix  usbguard.nix
config/networking/: dispatcherScripts.nix  general.nix  openssh.nix
config/systemd/: config.nix  logind.nix
home/: buildHomeConfigs.nix  env.nix
home/applications/: bat.nix  bitwarden.nix  chromium.nix  crosspipe.nix  direnv.nix  discord.nix  evince.nix  evolution.nix  fzf.nix  gaphor.nix  git.nix  gnome.nix  gpg.nix  gradle.nix  haruna.nix  htop.nix  neovim.nix  nix.nix  opencode.nix  openssh.nix  podman.nix  prismlauncher.nix  qpwgraph.nix  steam.nix  termius.nix  tools.nix  virt.nix  vscode-server.nix  vscode.nix  webcord.nix  wget.nix
home/desktop/: defaultApps.nix  userDirs.nix  wireplumber.nix
home/dev/: dotnet.nix  editor-config.nix  gradle.nix  node.nix  omnisharp.nix  prettier.nix  python.nix  rust.nix
home/gnome/: celluloid.nix  config.nix  console.nix  gtk.nix  kvantum.nix  totem.nix  tweaks.nix
home/matthew/: env.nix  nix.nix  persist.nix
home/plasma/: applets.nix  colors.nix  config.nix  dolphin.nix  gtk.nix  kdeconnect.nix  konsole.nix  kvantum.nix  shortcuts.nix
home/services/: tpm-fido.nix
lib/: capitalizeFirstLetter.nix  decToHex.nix  generateDconfDb.nix  hsl2rgb.nix  padStart.nix  rgb2hex.nix  toXML.nix
nixos/: acpi.nix  audio.nix  bluetooth.nix  boot.nix  console.nix  dbus.nix  docs.nix  env.nix  flatpak.nix  fonts.nix  fwupd.nix  kernel.nix  kmscon.nix  nix.nix  pam-mount.nix  pam.nix  podman.nix  printing.nix  secureboot.nix  tailscale.nix  time.nix  uhid.nix  users.nix  virt.nix  waydroid.nix  xdg.nix
nixos/applications/: general.nix
nixos/cpu/: intel.nix  scheduler.nix
nixos/de/: gnome.nix  plasma.nix
nixos/fs/: disks.nix  lvm.nix  mounts.nix
nixos/hardware/: battery.nix  gpu.nix  hyperv.nix  keyboard.nix  tpm.nix  wheel.nix
nixos/networking/: general.nix  (+1 more)
secrets/: nixvm-smb-creds.age
systems/: buildArgs.nix  buildHomeConfigs.nix  buildNixos.nix  buildSystem.nix  default.nix
systems/mango/home/plasma/deterministic-task-manager/plasmoid/: CMakeLists.txt  metadata.json
util/: decToHex.nix  hsl2rgb.nix  padStart.nix  toXML.nix
(+222 files in other folders)
